fix : 修改jupyter開啟的port，修改為8877
問題 :
使用8888 port，辨識度不夠明顯

原因 :
其他功能腳本上傳時，port誤開8888 port，造成port衝突

調整項目 :
先暫時修改port號為8877，並將用戶端參數修改，恢復營運

issue #0001

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     image: jupyter/base-notebook
     container_name: jupyter.test
     ports:
-      - "8888:8888"
+      - "8877:8888"
       - "5000:5000"
     volumes:
       - ./work:/home/jovyan/work/
     command: start-notebook.sh --NotebookApp.token=''
+    environment:
+      GRANT_SUDO: "yes"
+    user: root
